--- a/src/app/home/bots/bots-manage/bots-manage.component.html
+++ b/src/app/home/bots/bots-manage/bots-manage.component.html
@@ -646,7 +646,7 @@
 <ng-template #newAttributeModal>
   <div class="modal-body new-attribute-modal ignore-outside d-flex flex-column">
     <div class="d-flex justify-content-between">
-      <div class="font-lg">
+      <div class="font-16">
         <strong class="">User Attribute</strong>
       </div>
       <button type="button" class="btn btn-link" (click)="addNewDetail()">
@@ -820,7 +820,7 @@
 <ng-template #editAttributeModal>
   <div class="modal-body p-4 ignore-outside">
     <div class="d-flex justify-content-between">
-      <div class="font-lg mb-3">
+      <div class="font-16 mb-3">
         <strong class="">Edit Attribute</strong>
       </div>
     </div>
