--- a/src/app/home/bots/bots.component.html
+++ b/src/app/home/bots/bots.component.html
@@ -7,7 +7,7 @@
 <div class="d-flex flex-column position-relative">
     <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
     <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3">
-        <div class="font-weight-bold font-lg">List of Bots</div>
+        <div class="font-weight-bold font-16">List of Bots</div>
         <odp-search-box (enteredText)="search($event)" (reset)="clearSearch()"></odp-search-box>
         <div class="d-flex align-items-center">
             <div class="d-flex align-items-center mr-3">
