--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-bokmark/user-group-appcenter-bokmark.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-bokmark/user-group-appcenter-bokmark.component.html
@@ -28,10 +28,10 @@
     <ng-container *ngFor="let bookmark of bookmarkList;let i=index;">
       <div class="field-wrapper d-flex align-items-center justify-content-between w-100 px-3">
         <div class="d-flex align-items-center">
-          <span class="d-flex align-items-center mr-2 value-width font-md">
+          <span class="d-flex align-items-center mr-2 value-width ">
             <span>{{bookmark.name}}</span>
           </span>
-          <!-- <div class="input-control position-relative mr-3 font-xsm">
+          <!-- <div class="input-control position-relative mr-3 font-11">
             <div class="field form-control-plaintext text-muted">{{bookmark.url}}</div>
           </div> -->
         </div>
