--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-flows/user-group-appcenter-flows.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-appcenter/user-group-appcenter-flows/user-group-appcenter-flows.component.html
@@ -34,7 +34,7 @@
             <span *ngIf="!toggleAccordion[ptnrIndex]" class="fa fa-angle-down"></span>
           </span>
         </div>
-        <div class="role-list-item-body bg-white font-sm" *ngIf="toggleAccordion[ptnrIndex]">
+        <div class="role-list-item-body bg-white font-13" *ngIf="toggleAccordion[ptnrIndex]">
           <ng-container *ngFor="let role of ptnr.flows; let roleIndex = index">
             <div class="role-list-sub-item d-flex justify-content-between align-items-center px-3">
               <div class="name">
