--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-data-services/group-author-data-services.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-data-services/group-author-data-services.component.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column groups-content w-100 p-4">
   <div class="top-bar d-flex align-items-center justify-content-between">
     <div class="w-100">
-      <h5 class="font-weight-bold">Data Service</h5>
+      <h5 class="font-weight-bold font-20">Data Service</h5>
     </div>
-    <select name="permissions" id="permissions" class="all-permissions-selector custom-select"
+    <select name="permissions" id="permissions" class="all-permissions-selector form-control"
       [ngModel]="globalPermission" (ngModelChange)="changeAllPermissions($event)">
       <option value="custom">Custom</option>
       <option value="blocked">None</option>
@@ -13,7 +13,7 @@
   </div>
 
   <div class="d-flex flex-column w-100">
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Access Level</div>
@@ -40,7 +40,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Deploy</div>
@@ -64,7 +64,7 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Start/Stop</div>
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Design Tab</div>
@@ -118,7 +118,7 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Integration Tab</div>
@@ -148,7 +148,7 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Experience Tab</div>
@@ -178,7 +178,7 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Role Tab</div>
@@ -206,7 +206,7 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Settings Tab</div>
@@ -234,7 +234,7 @@
       </div>
     </div>
 
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Audit Tab</div>
