--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-nano-services/group-author-nano-services.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-nano-services/group-author-nano-services.component.html
@@ -102,7 +102,7 @@
 								  </div>
 								  <div class="permission-selector-dropdown-item d-flex align-items-center px-2 hover border-top"
 									(click)="removeException(srvc);toggleDropdown[srvc._id]=false">
-									<span class="text-danger font-sm">Remove Exception</span>
+									<span class="text-danger font-13">Remove Exception</span>
 								  </div>
 								</div>
 							  </div>
