--- a/src/app/home/control-panel/user/bulk-import-status/bulk-import-status.component.html
+++ b/src/app/home/control-panel/user/bulk-import-status/bulk-import-status.component.html
@@ -7,7 +7,7 @@
 <div class="d-flex flex-column position-relative">
     <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
     <div class="options d-flex justify-content-between align-items-center w-100 border-bottom p-3">
-        <div class="font-weight-bold font-lg">Report</div>
+        <div class="font-weight-bold font-16">Report</div>
         <div class="text-muted">Showing {{loadedCount}} of {{totalCount}}</div>
     </div>
     <div class="user-list w-100 px-3 pt-3">
