--- a/src/app/home/control-panel/user/bulk-import/bulk-import.component.html
+++ b/src/app/home/control-panel/user/bulk-import/bulk-import.component.html
@@ -7,7 +7,7 @@
 <div class="d-flex flex-column position-relative">
     <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb>
     <div class="options d-flex justify-content-between align-items-center w-100 border-bottom p-3">
-        <div class="font-weight-bold font-lg">List of Import Tasks</div>
+        <div class="font-weight-bold font-16">List of Import Tasks</div>
         <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn-min-width btn btn-dark"
             (click)="newUpload()">
             <span class="fa fa-upload mr-2"></span>
