--- a/src/app/home/control-panel/user/user-manage/user-manage.component.html
+++ b/src/app/home/control-panel/user/user-manage/user-manage.component.html
@@ -1,6 +1,6 @@
 <div class="settings">
   <div class="hover ignore-outside d-flex align-items-center p-2 border rounded-lg" (click)="showSettings = !showSettings">
-    <span class="fa fa-cog font-xl"></span>
+    <span class="fa fa-cog font-20"></span>
     <label class="my-0 mx-2">Profile Settings</label>
     <span class="fa-point fa" [ngClass]="{
         'fa-chevron-down': !showSettings,
