--- a/src/app/home/control-panel/workitems/workitems.component.scss
+++ b/src/app/home/control-panel/workitems/workitems.component.scss
@@ -4,7 +4,7 @@
 .wf {
   &-container {
     width: calc(100vw - 200px);
-    .font-xl {
+    .font-20 {
       line-height: 18px;
       letter-spacing: 2px;
     }
