--- a/src/app/home/local-bot/local-bot-cell-renderer/local-bot-cell-renderer.component.html
+++ b/src/app/home/local-bot/local-bot-cell-renderer/local-bot-cell-renderer.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="namespace === 'keys'">
   <!-- <ng-container *ngIf="field === 'label'">
-    <span class="odp-key font-lg" [ngClass]="{ 'text-accent': data.isActive, 'text-muted': !data.isActive }"></span>
+    <span class="odp-key font-16" [ngClass]="{ 'text-accent': data.isActive, 'text-muted': !data.isActive }"></span>
     <span class="key-name" [ngClass]="{ 'text-accent': data.isActive, 'text-muted': !data.isActive }">{{ data.label }}</span>
   </ng-container> -->
   <ng-container *ngIf="field === 'createdAt'">
