--- a/src/app/home/partner-onboard/partner-secrets/partner-secrets.component.html
+++ b/src/app/home/partner-onboard/partner-secrets/partner-secrets.component.html
@@ -39,17 +39,17 @@
                     <ng-container *ngIf="item.type=='apiKey'">API Key</ng-container>
                     <ng-container *ngIf="item.type=='certificate'">Digital Certificate</ng-container>
                 </div>
-                <div class="ml-4 mt-3 align-self-start font-sm profile-name">Name</div>
+                <div class="ml-4 mt-3 align-self-start font-13 profile-name">Name</div>
                 <div class="ml-4 mt-1 align-self-start text-dark text-truncate">{{item.name}}</div>
                 <ng-container *ngIf="item.type=='credentials'">
-                    <div class="ml-4 mt-2 align-self-start font-sm profile-name">Username</div>
+                    <div class="ml-4 mt-2 align-self-start font-13 profile-name">Username</div>
                     <div class="ml-4 mt-1 align-self-start text-dark text-truncate">{{item.meta.username}}</div>
                 </ng-container>
                 <ng-container *ngIf="item.type=='apiKey'">
                     <div class="ml-4 mt-2 align-self-start text-dark">**********</div>
                 </ng-container>
                 <ng-container *ngIf="item.type=='certificate'">
-                    <div class="ml-4 mt-2 align-self-start font-sm profile-name">File</div>
+                    <div class="ml-4 mt-2 align-self-start font-13 profile-name">File</div>
                     <div class="ml-4 mt-1 align-self-start text-dark text-truncate">{{item.meta.filename}}</div>
                 </ng-container>
                 <div class="foot-btn d-flex mt-auto align-items-center justify-content-center border-top w-100">
@@ -76,7 +76,7 @@
                 <span class="fa fa-times text-muted hover" (click)="addSecretModalRef.close(false)"></span>
             </div>
             <div class="d-flex flex-column align-items-start mb-3 px-3">
-                <label for="name" class="text-secondary font-sm">Name<sup class="text-danger">*</sup></label>
+                <label for="name" class="text-secondary font-13">Name<sup class="text-danger">*</sup></label>
                 <div class="name-wrapper position-relative w-100">
                     <input type="text" id="name" class="form-control" placeholder="Untitled Secret"
                         formControlName="name"
@@ -94,7 +94,7 @@
                 <label for="credentials"
                     class="type-option d-flex align-items-center justify-content-between rounded px-2"
                     [ngClass]="{'active':credentialsControl.checked}">
-                    <span class="text font-sm">User Identity</span>
+                    <span class="text font-13">User Identity</span>
                     <input #credentialsControl type="radio" id="credentials" class="d-none" name="type"
                         value="credentials" formControlName="type"
                         (change)="addRemoveValidators('userIdentity',credentialsControl.checked)">
@@ -105,7 +105,7 @@
                 </label>
                 <label for="apiKey" class="type-option d-flex align-items-center justify-content-between rounded px-2"
                     [ngClass]="{'active':apiKeyControl.checked}">
-                    <span class="text font-sm">API Key</span>
+                    <span class="text font-13">API Key</span>
                     <input #apiKeyControl type="radio" id="apiKey" class="d-none" name="type" value="apiKey"
                         formControlName="type" (change)="addRemoveValidators('apiKey',apiKeyControl.checked)">
                     <span class="check-circle rounded-circle border d-flex align-items-center justify-content-center"
@@ -116,7 +116,7 @@
                 <label for="certificate"
                     class="type-option d-flex align-items-center justify-content-between rounded px-2"
                     [ngClass]="{'active':certificateControl.checked}">
-                    <span class="text font-sm">Certificate</span>
+                    <span class="text font-13">Certificate</span>
                     <input #certificateControl type="radio" id="certificate" class="d-none" name="type"
                         value="certificate" formControlName="type"
                         (change)="addRemoveValidators('certificate',certificateControl.checked)">
@@ -131,13 +131,13 @@
             *ngIf="credentialsControl.checked || apiKeyControl.checked || certificateControl.checked">
             <ng-container formGroupName="value" *ngIf="credentialsControl.checked">
                 <div class="d-flex flex-column align-items-start mb-3">
-                    <label for="username" class="text-secondary font-sm">Username<sup
+                    <label for="username" class="text-secondary font-13">Username<sup
                             class="text-danger">*</sup></label>
                     <input type="text" id="username" class="form-control" placeholder="Username"
                         formControlName="username">
                 </div>
                 <div class="d-flex flex-column align-items-start mb-3">
-                    <label for="password" class="text-secondary font-sm">Password<sup
+                    <label for="password" class="text-secondary font-13">Password<sup
                             class="text-danger">*</sup></label>
                     <input type="password" id="password" class="form-control" placeholder="Password"
                         formControlName="password">
@@ -145,7 +145,7 @@
             </ng-container>
             <ng-container formGroupName="value" *ngIf="apiKeyControl.checked">
                 <div class="d-flex flex-column align-items-start mb-3">
-                    <label for="apiKey" class="text-secondary font-sm">API Key<sup class="text-danger">*</sup></label>
+                    <label for="apiKey" class="text-secondary font-13">API Key<sup class="text-danger">*</sup></label>
                     <textarea name="apiKey" id="apiKey" rows="4" class="form-control" formControlName="apiKey"
                         placeholder="API Key"></textarea>
                     <!-- <input type="text" id="apiKey" class="form-control" placeholder="API Key" formControlName="apiKey"> -->
@@ -153,14 +153,14 @@
             </ng-container>
             <ng-container formGroupName="value" *ngIf="certificateControl.checked">
                 <div class="d-flex flex-column align-items-start mb-3">
-                    <label for="certificate" class="text-secondary font-sm">Certificate<sup
+                    <label for="certificate" class="text-secondary font-13">Certificate<sup
                             class="text-danger">*</sup></label>
                     <input type="file" id="certificate" class="form-control" (change)="readCert($event)"
                         placeholder="Upload Certificate">
                 </div>
             </ng-container>
             <!-- <div class="d-flex flex-column align-items-start mb-3">
-                <label for="description" class="text-secondary font-sm">Description</label>
+                <label for="description" class="text-secondary font-13">Description</label>
                 <textarea type="text" id="description" class="form-control" rows="4" placeholder="Optional"
                     formControlName="description"></textarea>
             </div> -->
