--- a/src/app/home/schema-utils/integration/integration.component.html
+++ b/src/app/home/schema-utils/integration/integration.component.html
@@ -466,7 +466,7 @@
                         <div class="d-flex flex-column mt-4" [formGroup]="hookForm">
                             <div class="d-flex w-100 mb-4">
                                 <div class="label-width mt-1 text-secondary">Name
-                                    <sup class="text-danger font-lg " ngbTooltip="Mandatory field">*</sup>
+                                    <sup class="text-danger font-16 " ngbTooltip="Mandatory field">*</sup>
                                 </div>
                                 <div class="value-width position-relative">
                                     <input *ngIf="edit.status" class="form-control" type="text"
@@ -482,7 +482,7 @@
                             </div>
                             <div class="d-flex w-100 mb-4">
                                 <div class="label-width mt-1 text-secondary">Endpoint
-                                    <sup class="text-danger font-lg " ngbTooltip="Mandatory field">*</sup>
+                                    <sup class="text-danger font-16 " ngbTooltip="Mandatory field">*</sup>
                                 </div>
                                 <div class="value-width position-relative">
                                     <textarea *ngIf=" edit.status" class="form-control " type="text" rows="5"
@@ -534,7 +534,7 @@
                         <div class="d-flex flex-column mt-4" [formGroup]="hookForm">
                             <div class="d-flex w-100 mb-4">
                                 <div class="label-width mt-1 text-secondary">Name
-                                    <sup class="text-danger font-lg " ngbTooltip="Mandatory field">*</sup>
+                                    <sup class="text-danger font-16 " ngbTooltip="Mandatory field">*</sup>
                                 </div>
                                 <div class="value-width position-relative">
                                     <input *ngIf="edit.status" class="form-control" type="text"
@@ -545,7 +545,7 @@
                             </div>
                             <div class="d-flex w-100 mb-4">
                                 <div class="label-width mt-1 text-secondary">Endpoint
-                                    <sup class="text-danger font-lg " ngbTooltip="Mandatory field">*</sup>
+                                    <sup class="text-danger font-16 " ngbTooltip="Mandatory field">*</sup>
                                 </div>
                                 <div class="value-width position-relative">
                                     <input type="text" class="form-control" formControlName="url">
