--- a/src/app/home/schema-utils/maker-checker/maker-checker.component.html
+++ b/src/app/home/schema-utils/maker-checker/maker-checker.component.html
@@ -15,7 +15,7 @@
         </div>
         <div *ngIf="edit.status">
           <img src="./assets/img/maker-checker.png" alt="" />
-          <div class="font-lg font-weight-bold mt-4">Add Workflows</div>
+          <div class="font-16 font-weight-bold mt-4">Add Workflows</div>
           <div class="text-muted mt-2">
             Click on add to create a multilevel workflow for permitting various
             permissions/roles.
@@ -116,15 +116,15 @@
                     />
                   </div>
                   <div
-                    class="col-1 font-sm d-flex"
+                    class="col-1 font-13 d-flex"
                     [ngClass]="{ 'justify-content-center': !edit.status }"
                   >
                     <span class="">#</span>
                   </div>
-                  <div class="col-5 font-sm">
+                  <div class="col-5 font-13">
                     <span [ngClass]="{ 'ml-4': !edit.status }">STEP NAME</span>
                   </div>
-                  <div class="col-5 font-sm">
+                  <div class="col-5 font-13">
                     <span>NO OF APPROVALS</span>
                   </div>
                 </div>
@@ -149,10 +149,10 @@
                       >
                         <div class="mx-2 hover">
                           <span
-                            class="fas fa-ellipsis-v font-sm text-muted"
+                            class="fas fa-ellipsis-v font-13 text-muted"
                           ></span>
                           <span
-                            class="fas fa-ellipsis-v font-sm text-muted"
+                            class="fas fa-ellipsis-v font-13 text-muted"
                           ></span>
                         </div>
                         <input
