--- a/src/app/utils/integration-flow/node-properties/soap-block/soap-block.component.html
+++ b/src/app/utils/integration-flow/node-properties/soap-block/soap-block.component.html
@@ -68,7 +68,7 @@
 <ng-template #selectWSDLOperationTemplate>
     <div class="modal-body p-4 ignore-outside">
         <div class="d-flex align-items-center justify-content-between">
-            <div class="font-lg font-weight-bold text-accent">Select an Operation</div>
+            <div class="font-16 font-weight-bold text-accent">Select an Operation</div>
             <span class="fa fa-times text-muted hover" (click)="selectWSDLOperationTemplateRef.close(false)"></span>
         </div>
         <div class="operation-list my-3">
