--- a/src/app/utils/structure-field-properties/structure-field-properties.component.html
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.html
@@ -296,7 +296,7 @@
 <div class="new-user-window position-fixed bg-white border-left p-4 d-flex flex-column schemaProperties"
   [ngClass]="{'show': showProperties}">
   <div class="d-flex align-items-center">
-    <span class="font-xl text-dark font-weight-bold w-100 d-flex align-items-center justify-content-between">
+    <span class="font-20 text-dark font-weight-bold w-100 d-flex align-items-center justify-content-between">
       <div class="d-flex schemaProperties-header ">
         <span *ngIf="name" class="text-truncate">{{name}}&nbsp;</span>
         <span *ngIf="!name" class="text-truncate text-muted">Unnamed&nbsp;</span>
