--- a/src/app/utils/structure-field-properties/text-property/text-property.component.html
+++ b/src/app/utils/structure-field-properties/text-property/text-property.component.html
@@ -103,7 +103,7 @@
     <!-- <div class="d-flex w-100 my-2"
       *ngIf="sampleRegexValue.length || form.get('properties.pattern').hasError('patternValidator') ">
       <div ></div>
-      <div class=" bg-light py-2 pattern font-sm mr-3 text-center">
+      <div class=" bg-light py-2 pattern font-13 mr-3 text-center">
         <ng-container *ngIf="!form.get('properties.pattern').hasError('patternValidator') && sampleRegexValue.length">
           <span class="text-secondary">Sample :</span>
           <span class="text-accent">{{sampleRegexValue}}</span>
