--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="d-flex align-items-center mr-3">
-        <!-- <button type="button" class="btn btn-link font-sm" (click)="downloadIEG()">
+        <!-- <button type="button" class="btn btn-link font-13" (click)="downloadIEG()">
           <span class="fa fa-download"></span>
           <span class="ml-2">Edge Agent</span>
         </button> -->
@@ -242,7 +242,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex align-items-center w-100 px-4 font-sm">
+    <div class="d-flex align-items-center w-100 px-4 font-13">
       <span class="text-secondary ml-2">Password</span>
       <div class="d-flex align-items-center justify-content-center mx-3">
         <span
