--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -12,7 +12,7 @@
     <div class="w-50 d-flex align-items-center justify-content-end">
       <ng-container *ngIf="isSuperAdmin">
         <!-- <div class="d-flex align-items-center mr-3">
-                    <button type="button" class="btn btn-link font-sm" (click)="downloadIEG()">
+                    <button type="button" class="btn btn-link font-13" (click)="downloadIEG()">
                         <span class="fa fa-download"></span>
                         <span class="ml-2">Edge Agent</span>
                     </button>
@@ -454,7 +454,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex align-items-center w-100 px-4 font-sm">
+    <div class="d-flex align-items-center w-100 px-4 font-13">
       <span class="text-secondary ml-2">Password</span>
       <div class="d-flex align-items-center justify-content-center mx-3">
         <span *ngIf="!agentConfig.showPassword" class="fa fa-eye mr-2"
