--- a/src/app/home/agents/agents.component.html
+++ b/src/app/home/agents/agents.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column w-100 h-100">
     <odp-breadcrumb></odp-breadcrumb>
     <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3 mb-3">
-        <div class="font-weight-bold font-lg">List of Agents</div>
+        <div class="font-weight-bold font-16">List of Agents</div>
         <span class="button-placeholder">
             &nbsp;
             <button *ngIf="agentType == 'APPAGENT' && hasPermission('PMABC')" type="button" class="btn btn-link"
