--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column w-100 h-100">
     <odp-breadcrumb></odp-breadcrumb>
     <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3 mb-3">
-        <div class="font-weight-bold font-lg">List of Flow</div>
+        <div class="font-weight-bold font-16">List of Flow</div>
         <button type="button" class="add-new btn-min-width btn btn-primary show" id="createDataFormat"
             *ngIf="hasWritePermission('FAAS')" (click)="newFlow()">
             <span class="fa fa-plus mr-2"></span>
@@ -32,7 +32,7 @@
                 <span class="fa fa-times text-muted hover" (click)="newFlowModalRef.close(false)"></span>
             </div>
             <div class="d-flex flex-column w-100">
-                <label for="name" class="font-sm text-secondary">
+                <label for="name" class="font-13 text-secondary">
                     <span class="text">Name</span>
                     <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
                 </label>
@@ -52,7 +52,7 @@
                             ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
                     </ng-container>
                 </div>
-                <label for="name" class="font-sm text-secondary">
+                <label for="name" class="font-13 text-secondary">
                     <span class="text">Type</span>
                     <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
                 </label>
@@ -63,7 +63,7 @@
                         <option value="TIMER">TIMER</option>
                     </select>
                 </div>
-                <label for="description" class="font-sm text-secondary mt-3">Description</label>
+                <label for="description" class="font-13 text-secondary mt-3">Description</label>
                 <div class="name-wrapper position-relative">
                     <textarea #newFlowTextarea class="form-control" id="description" rows="5"
                         placeholder="No description" formControlName="description"
