--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-functions/group-author-functions.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-functions/group-author-functions.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column groups-content w-100 p-4">
   <div class="top-bar d-flex align-items-center justify-content-between">
     <div class="w-100">
-      <h5 class="font-weight-bold">Function</h5>
+      <h5 class="font-weight-bold font-20">Function</h5>
     </div>
     <!-- <select name="permissions" id="permissions" class="all-permissions-selector custom-select"
       [ngModel]="globalPermission" (ngModelChange)="changeAllPermissions($event)">
@@ -12,7 +12,7 @@
     </select> -->
   </div>
   <div class="d-flex flex-column w-100">
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Access Level</div>
@@ -39,7 +39,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Deploy</div>
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Start/Stop</div>
