--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-groups/group-author-groups.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-groups/group-author-groups.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex flex-column groups-content w-100 p-4">
   <div class="top-bar d-flex align-items-center justify-content-between">
     <div class="w-100">
-      <h5 class="font-weight-bold">Groups</h5>
+      <h5 class="font-weight-bold font-20">Groups</h5>
     </div>
     <!-- <select name="permissions" id="permissions" class="all-permissions-selector custom-select"
       [ngModel]="globalPermission" (ngModelChange)="changeAllPermissions($event)">
@@ -12,7 +12,7 @@
     </select> -->
   </div>
   <div class="d-flex flex-column w-100">
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Access Level</div>
@@ -42,7 +42,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Users Tab</div>
@@ -69,7 +69,7 @@
         </div>
       </div>
     </div>
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Bots Tab</div>
@@ -98,7 +98,7 @@
     </div>
 
 
-    <div class="d-flex flex-column justify-content-between border-bottom mt-4">
+    <div class="d-flex flex-column justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Author Tab</div>
@@ -164,7 +164,7 @@
 
 
 
-    <div class="d-flex flex-column justify-content-between border-bottom mt-4">
+    <div class="d-flex flex-column justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Appcenter Tab</div>
