--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-insights/group-author-insights.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/group-author-insights/group-author-insights.component.html
@@ -12,7 +12,7 @@
     </select> -->
   </div>
   <div class="d-flex flex-column w-100">
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Data Services</div>
@@ -37,7 +37,7 @@
         <div class="permission-btn-block d-flex align-items-center justify-content-end"></div>
       </div>
     </div>
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Users</div>
@@ -60,7 +60,7 @@
         <div class="permission-btn-block d-flex align-items-center justify-content-end"></div>
       </div>
     </div>
-    <div class="d-flex justify-content-between border-bottom mt-4">
+    <div class="d-flex justify-content-between border-bottom py-3">
       <div>
         <div class="p-3 text-dark">
           <div class="font-weight-bold">Groups</div>
