--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-bots/user-group-bots.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-members/user-group-bots/user-group-bots.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
 	<div class="grid-header d-flex align-items-center justify-content-between p-4">
 		<div class="d-flex align-items-center" *ngIf="hasPermission('PMGMBD')">
-			<h5>Bots ({{userList.length}})</h5>
+			<h5 class="font-20">Bots ({{userList.length}})</h5>
 			<!-- <div class="d-flex align-items-center" (click)="!isSelectAllDisabled && checkAllUser(!isAllUserChecked)">
         <odp-round-check [edit]="{status:!isSelectAllDisabled}" class="mr-2 pl-1" [checked]="isAllUserChecked"
           (checkedChange)="!isSelectAllDisabled && checkAllUser($event)">
