--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -8,7 +8,7 @@
   <div class="d-flex flex-column position-relative" style="height: 100vh">
     <!-- <odp-breadcrumb [paths]="breadcrumbPaths"></odp-breadcrumb> -->
     <div class="options d-flex">
-      <div class="fw-600 font-xxl">Users</div>
+      <div class="fw-600 font-22">Users</div>
       <div class="d-flex align-items-center ml-auto">
         <ng-container *ngIf="hasPermission('PMUBD')">
           <button *ngIf="checkedUsers.length > 0" type="button" class="btn btn-outline-light border text-danger mr-3"
@@ -34,7 +34,7 @@
     </div>
 
     <div class="bg-white list" style="max-height: 80vh; min-height: 80vh" *ngIf="!isLoading">
-      <div class="d-flex justify-content-center align-items-center h-100 font-xxl fw-600 heading"
+      <div class="d-flex justify-content-center align-items-center h-100 font-22 fw-600 heading"
         *ngIf="userList.length === 0">
         No users found
       </div>
@@ -95,7 +95,7 @@
               <div *ngIf="currentTab === 'Attributes'" style="display: flex">
                 <label style="color: #6c7584; font-weight: 400">All attributes in which the user has been added</label>
                 <div class="add-attribute hover" (click)="showAttributeSide()" id="showAttributeSide">
-                  <i class="fa fa-plus-circle font-xl"></i>
+                  <i class="fa fa-plus-circle font-20"></i>
                   <label class="fw-500 font-normal heading">Add Attribute</label>
                 </div>
               </div>
@@ -103,7 +103,7 @@
                 <label style="color: #6c7584; font-weight: 400">All groups in which the user has been added
                 </label>
                 <div class="add-attribute hover" (click)="openGroupModal()" id="openModal">
-                  <i class="fa fa-plus-circle font-xl"></i>
+                  <i class="fa fa-plus-circle font-20"></i>
                   <label class="fw-500 font-normal heading">Add to Groups</label>
                 </div>
               </div>
