--- a/src/app/home/data-format-listing/data-format-listing.component.html
+++ b/src/app/home/data-format-listing/data-format-listing.component.html
@@ -7,7 +7,7 @@
 <div class="d-flex flex-column w-100 h-100">
   <odp-breadcrumb></odp-breadcrumb>
   <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3 mb-3">
-    <div class="font-weight-bold font-lg text-accent">List of Data Formats</div>
+    <div class="font-weight-bold font-16 text-accent">List of Data Formats</div>
     <odp-search-box (enteredText)="search($event)" (reset)="clearSearch()"></odp-search-box>
     <!-- <button type="button" class="add-new btn-min-width btn btn-primary show" id="createDataFormat"
       [routerLink]="['/app',app,'dfm']" *ngIf="hasManagePermission('DF')"> -->
@@ -40,37 +40,37 @@
                 <div class="d-flex align-items-start">
                   <odp-format-type-badge [data]="dataFormat"></odp-format-type-badge>
                   <div *ngIf="dataFormat.formatType === 'DELIMITER'"
-                    class="data-format-type d-flex align-items-center justify-content-center font-sm font-weight-bold ml-1">
+                    class="data-format-type d-flex align-items-center justify-content-center font-13 font-weight-bold ml-1">
                     {{dataFormat.character}}
                   </div>
                 </div>
                 <div class="data-format-options text-muted d-flex align-items-center position-relative">
                   <div class="microflows d-flex align-items-center mr-3">
-                    <!-- <span class="fa fa-external-link-alt font-xs mr-2"></span> -->
+                    <!-- <span class="fa fa-external-link-alt font-12 mr-2"></span> -->
                     <span class="text-dark">{{dataFormat?.flowCount || '0'}}</span>
                   </div>
                   <div class="dropdown" ngbDropdown placement="bottom-right">
                     <span class="fa fa-ellipsis-h pr-2 hover" ngbDropdownToggle></span>
                     <div ngbDropdownMenu class="p-0" *ngIf="canEditDataFormat(dataFormat._id)">
-                      <button type="button" class="dropdown-item font-sm" (click)="cloneDataFormat(i)"
+                      <button type="button" class="dropdown-item font-13" (click)="cloneDataFormat(i)"
                         [attr.id]="'cloneDataFormat-'+i">
                         <span class="text">Clone</span>
                       </button>
-                      <button type="button" class="dropdown-item font-sm"
+                      <button type="button" class="dropdown-item font-13"
                         [routerLink]="['/app',app,'dfm',dataFormat._id]" [attr.id]="'viewDataFormat-'+i">
                         <span class="text">View</span>
                       </button>
-                      <button type="button" class="dropdown-item font-sm" (click)="editDataFormat(i)"
+                      <button type="button" class="dropdown-item font-13" (click)="editDataFormat(i)"
                         [attr.id]="'editDataFormat-'+i">
                         <span class="text">Edit</span>
                       </button>
-                      <button type="button" class="dropdown-item font-sm" (click)="deleteDataFormat(i)"
+                      <button type="button" class="dropdown-item font-13" (click)="deleteDataFormat(i)"
                         [attr.id]="'deleteDataFormat-'+i">
                         <span class="text">Delete</span>
                       </button>
                     </div>
                     <div ngbDropdownMenu class="p-0" *ngIf="!canEditDataFormat(dataFormat._id)">
-                      <button type="button" class="dropdown-item font-sm"
+                      <button type="button" class="dropdown-item font-13"
                         [routerLink]="['/app',app,'dfm',dataFormat._id]" [attr.id]="'viewDataFormat-'+i">
                         <span class="text">View</span>
                       </button>
@@ -80,7 +80,7 @@
               </div>
               <div class="body d-flex flex-column align-self-start justify-content-start p-2 w-100">
                 <div class="data-format-name w-100 text-truncate">{{dataFormat.name}}</div>
-                <div class="data-format-description text-muted font-sm mt-1">
+                <div class="data-format-description text-muted font-13 mt-1">
                   {{dataFormat.description ? dataFormat.description : 'No Description'}}
                 </div>
               </div>
@@ -89,19 +89,19 @@
                 <div class="position-relative d-flex flex-column">
                   <div class="position-absolute more-options bg-border align-self-center" (click)="showMoreOptions[i]=!showMoreOptions[i]"></div>
                   <div class="d-flex align-items-center">
-                    <button type="button" class="card-button font-sm text-secondary" [routerLink]="['/app',app,'dfm',dataFormat._id]"
+                    <button type="button" class="card-button font-13 text-secondary" [routerLink]="['/app',app,'dfm',dataFormat._id]"
                       [attr.id]="'viewDataFormat-'+i">
                       <span class="fa fa-eye mr-2"></span>
                       <span class="text">View</span>
                     </button>
-                    <button type="button" class="card-button font-sm text-secondary" (click)="editDataFormat(i)"
+                    <button type="button" class="card-button font-13 text-secondary" (click)="editDataFormat(i)"
                       [attr.id]="'editDataFormat-'+i">
                       <span class="fa fa-pencil-alt mr-2"></span>
                       <span class="text">Edit</span>
                     </button>
                   </div>
                   <div class="d-flex align-items-center">
-                    <button type="button" class="card-button font-sm text-secondary" (click)="deleteDataFormat(i)"
+                    <button type="button" class="card-button font-13 text-secondary" (click)="deleteDataFormat(i)"
                       [attr.id]="'deleteDataFormat-'+i">
                       <span class="fa fa-trash mr-2"></span>
                       <span class="text">Delete</span>
@@ -136,7 +136,7 @@
         <span class="fa fa-times text-muted hover" (click)="newDataFormatModalRef.close(false)"></span>
       </div>
       <div class="d-flex flex-column w-100">
-        <label for="name" class="font-sm text-secondary">
+        <label for="name" class="font-13 text-secondary">
           <span class="text">Name</span>
           <sup class="text-danger font-normal sup-top" ngbTooltip="Mandatory field">*</sup>
         </label>
@@ -156,7 +156,7 @@
               ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
           </ng-container>
         </div>
-        <label for="description" class="font-sm text-secondary mt-3">Description</label>
+        <label for="description" class="font-13 text-secondary mt-3">Description</label>
         <div class="name-wrapper position-relative">
           <textarea #newDataFormatTextarea class="form-control" id="description" rows="5" placeholder="No description"
             formControlName="description" (keydown.enter)="$event.preventDefault()"
@@ -194,7 +194,7 @@
       </p>
       <div class="d-flex flex-column w-100">
         <div class="form-group">
-          <label for="name" class="font-sm text-secondary">
+          <label for="name" class="font-13 text-secondary">
             <span class="text">Clone Name</span>
             <sup class="text-danger font-normal sup-top" ngbTooltip="Mandatory field">*</sup>
           </label>
@@ -216,7 +216,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="description" class="font-sm text-secondary mt-3">Clone Description</label>
+          <label for="description" class="font-13 text-secondary mt-3">Clone Description</label>
           <div class="name-wrapper position-relative">
             <textarea #cloneDataFormatTextarea class="form-control" id="description" rows="5"
               placeholder="No description" formControlName="description" (keydown.enter)="$event.preventDefault()"
