--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column w-100 h-100 bg-light-gray">
   <div class="options d-flex justify-content-between align-items-center w-100 px-4">
-    <div class="font-xxl">
+    <div class="font-22">
       <span class="fw-600 mr-2">Functions ({{totalCount}})</span>
       <span></span>
     </div>
