--- a/src/app/home/local-bot/manage-bot-key/manage-bot-key.component.html
+++ b/src/app/home/local-bot/manage-bot-key/manage-bot-key.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="d-flex ml-auto mr-2">
         <div class="add-attribute hover" (click)="add()">
-            <i class="fa fa-plus-circle font-xl icon-primary mr-2"></i>
+            <i class="fa fa-plus-circle font-20 icon-primary mr-2"></i>
             <label class="fw-500 font-normal heading">Add Keys</label>
 
         </div>
@@ -30,5 +30,5 @@
 
 
 <odp-delete-modal [open]="openDeleteBotKeyModal" (close)="closeDeleteBotKeyModal($event)">
-    <span class="odp-bots  font-xl text-success"></span>
+    <span class="odp-bots  font-20 text-success"></span>
 </odp-delete-modal>
