--- a/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
+++ b/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="d-flex ml-auto mr-2">
         <div class="add-attribute hover" (click)="add()">
-            <i class="fa fa-plus-circle font-xl icon-primary mr-2"></i>
+            <i class="fa fa-plus-circle font-20 icon-primary mr-2"></i>
             <label class="fw-500 font-normal heading">Add Property</label>
 
         </div>
