--- a/src/app/home/nano-service-listing/nano-service-listing.component.html
+++ b/src/app/home/nano-service-listing/nano-service-listing.component.html
@@ -7,7 +7,7 @@
 <div class="d-flex flex-column w-100 h-100">
   <odp-breadcrumb></odp-breadcrumb>
   <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3 mb-3">
-    <div class="font-weight-bold font-lg">List of Nano Service</div>
+    <div class="font-weight-bold font-16">List of Nano Service</div>
     <odp-search-box (enteredText)="search($event)" (reset)="clearSearch()"></odp-search-box>
     <!-- <button type="button" class="add-new btn-min-width btn btn-primary show" id="createDataFormat"
       *ngIf="hasWritePermission('NS')" [routerLink]="['/app',app,'nsm']"> -->
@@ -27,7 +27,7 @@
           <div class="d-flex align-items-center">
             <div class="info d-flex flex-column w-100">
               <div class="font-weight-bold mb-1">{{nanoService.name}}</div>
-              <a [attr.href]="nanoService.url" target="_blank" class="font-sm text-accent text-truncate url-holder"
+              <a [attr.href]="nanoService.url" target="_blank" class="font-13 text-accent text-truncate url-holder"
                 container="body" [ngbTooltip]="nanoService.url">{{nanoService.url}}</a>
             </div>
           </div>
@@ -89,7 +89,7 @@
                 <img *ngIf="nanoService.logo" [attr.src]="nanoService.logo" alt="DA Logo">
               </div>
             </div>
-            <div class="data-format-name font-lg">{{nanoService.name}}</div>
+            <div class="data-format-name font-16">{{nanoService.name}}</div>
             <div class="d-flex align-items-center my-2">
               <div class="d-flex align-items-center details-item text-muted">
                 <span class="fa fa-exchange-alt mr-2"></span>
@@ -105,7 +105,7 @@
               [ngClass]="{'active':showMoreOptions[i]}" odpClickOutside (outside)="showMoreOptions[i]=false">
               <div class="position-relative d-flex flex-column">
                 <div class="d-flex align-items-center">
-                  <button type="button" class="card-button font-sm text-secondary" (click)="viewNanoService(i)"
+                  <button type="button" class="card-button font-13 text-secondary" (click)="viewNanoService(i)"
                     [attr.id]="'viewPartner-'+i">
                     <span class="fa fa-eye mr-2"></span>
                     <span class="text">View</span>
@@ -121,19 +121,19 @@
                   <span class="fa fa-angle-up"></span>
                 </div>
                 <div class="d-flex align-items-center">
-                  <button type="button" class="card-button font-sm text-secondary" (click)="viewNanoService(i)"
+                  <button type="button" class="card-button font-13 text-secondary" (click)="viewNanoService(i)"
                     [attr.id]="'viewPartner-'+i">
                     <span class="fa fa-eye mr-2"></span>
                     <span class="text">View</span>
                   </button>
-                  <button type="button" class="card-button font-sm text-secondary" (click)="editNanoService(i)"
+                  <button type="button" class="card-button font-13 text-secondary" (click)="editNanoService(i)"
                     [attr.id]="'editPartner-'+i">
                     <span class="fa fa-pencil-alt mr-2"></span>
                     <span class="text">Edit</span>
                   </button>
                 </div>
                 <div class="d-flex align-items-center">
-                  <button type="button" class="card-button font-sm text-secondary" (click)="deleteNanoService(i)"
+                  <button type="button" class="card-button font-13 text-secondary" (click)="deleteNanoService(i)"
                     [attr.id]="'deletePartner-'+i">
                     <span class="fa fa-trash mr-2"></span>
                     <span class="text">Delete</span>
@@ -171,7 +171,7 @@
         <span class="fa fa-times text-muted hover" (click)="newNanoServiceModalRef.close(false)"></span>
       </div>
       <div class="d-flex flex-column w-100">
-        <label for="name" class="font-sm text-secondary">
+        <label for="name" class="font-13 text-secondary">
           <span class="text">Name</span>
           <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
         </label>
@@ -191,7 +191,7 @@
               ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
           </ng-container>
         </div>
-        <label for="description" class="font-sm text-secondary mt-3">Description</label>
+        <label for="description" class="font-13 text-secondary mt-3">Description</label>
         <div class="name-wrapper position-relative">
           <textarea #newNanoServiceTextarea class="form-control" id="description" rows="5" placeholder="No description"
             formControlName="description" (keydown.enter)="$event.preventDefault()" (keyup.enter)="newNanoServiceModalRef.close(true)"></textarea>
