--- a/src/app/home/partner-listing/partner-listing.component.html
+++ b/src/app/home/partner-listing/partner-listing.component.html
@@ -7,7 +7,7 @@
 <div class="d-flex flex-column w-100 h-100">
   <odp-breadcrumb></odp-breadcrumb>
   <div class="options d-flex justify-content-between align-items-center w-100 border-bottom px-3 mb-3">
-    <div class="font-weight-bold font-lg">List of Partners</div>
+    <div class="font-weight-bold font-16">List of Partners</div>
     <odp-search-box (enteredText)="search($event)" (reset)="clearSearch()"></odp-search-box>
     <button type="button" class="add-new btn-min-width btn btn-primary show" (click)="newPartner()"
       *ngIf="canCreatePartner">
@@ -38,7 +38,7 @@
                   <img *ngIf="partner.logo" [attr.src]="partner.logo" alt="Partner Logo">
                 </div>
               </div>
-              <div class="partner-name font-lg">{{partner.name}}</div>
+              <div class="partner-name font-16">{{partner.name}}</div>
               <div class="d-flex align-items-center my-2">
                 <div class="d-flex align-items-center details-item text-muted">
                   <span class="fa fa-exchange-alt mr-2"></span>
@@ -54,18 +54,18 @@
                 [ngClass]="{'active':showMoreOptions[i]}" odpClickOutside (outside)="showMoreOptions[i]=false">
                 <div class="position-relative d-flex flex-column">
                   <div class="d-flex align-items-center">
-                    <button type="button" class="card-button font-sm text-secondary" (click)="viewPartner(i)"
+                    <button type="button" class="card-button font-13 text-secondary" (click)="viewPartner(i)"
                       [attr.id]="'viewPartner-'+i">
                       <span class="fa fa-eye mr-2"></span>
                       <span class="text">View</span>
                     </button>
-                    <button *ngIf="canEditPartner(partner._id)" type="button" class="card-button font-sm text-secondary"
+                    <button *ngIf="canEditPartner(partner._id)" type="button" class="card-button font-13 text-secondary"
                       (click)="editPartner(i)" [attr.id]="'editPartner-'+i">
                       <span class="fa fa-pencil-alt mr-2"></span>
                       <span class="text">Edit</span>
                     </button>
                     <button *ngIf="canDeletePartner(partner._id)" type="button"
-                      class="card-button font-sm text-secondary" (click)="deletePartner(i)"
+                      class="card-button font-13 text-secondary" (click)="deletePartner(i)"
                       [attr.id]="'deletePartner-'+i">
                       <span class="fa fa-trash mr-2"></span>
                       <span class="text">Delete</span>
@@ -81,19 +81,19 @@
                     <span class="fa fa-angle-up"></span>
                   </div>
                   <div class="d-flex align-items-center">
-                    <button type="button" class="card-button font-sm text-secondary" (click)="viewPartner(i)"
+                    <button type="button" class="card-button font-13 text-secondary" (click)="viewPartner(i)"
                       [attr.id]="'viewPartner-'+i">
                       <span class="fa fa-eye mr-2"></span>
                       <span class="text">View</span>
                     </button>
-                    <button type="button" class="card-button font-sm text-secondary" (click)="editPartner(i)"
+                    <button type="button" class="card-button font-13 text-secondary" (click)="editPartner(i)"
                       [attr.id]="'editPartner-'+i">
                       <span class="fa fa-pencil-alt mr-2"></span>
                       <span class="text">Edit</span>
                     </button>
                   </div>
                   <div class="d-flex align-items-center">
-                    <button type="button" class="card-button font-sm text-secondary" (click)="deletePartner(i)"
+                    <button type="button" class="card-button font-13 text-secondary" (click)="deletePartner(i)"
                       [attr.id]="'deletePartner-'+i">
                       <span class="fa fa-trash mr-2"></span>
                       <span class="text">Delete</span>
@@ -129,7 +129,7 @@
         <span class="fa fa-times text-muted hover" (click)="newPartnerModalRef.close(false)"></span>
       </div>
       <div class="d-flex flex-column w-100">
-        <label for="name" class="font-sm text-secondary">
+        <label for="name" class="font-13 text-secondary">
           <span class="text">Name</span>
           <sup class="text-danger font-normal sup-top" ngbTooltip="Mandatory field">*</sup>
         </label>
@@ -149,7 +149,7 @@
               ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
           </ng-container>
         </div>
-        <label for="description" class="font-sm text-secondary mt-3">Description</label>
+        <label for="description" class="font-13 text-secondary mt-3">Description</label>
         <div class="name-wrapper position-relative">
           <textarea #newPartnerTextarea class="form-control" id="description" rows="5" placeholder="No description"
             formControlName="description" (keydown.enter)="$event.preventDefault()"
