--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -164,7 +164,7 @@
       </odp-delete-icon>
     </div>
     <div class="d-flex flex-column align-items-center my-5 px-4">
-      <p class="font-lg font-weight-bold text-center">Old Session is Active</p>
+      <p class="font-16 font-weight-bold text-center">Old Session is Active</p>
       <p class="text-center text-secondary">
         You already have an active session.
         <ng-container *ngIf="rbacUserReloginAction === 'allow'"
