--- a/src/assets/scss/bootstrap/_variables.scss
+++ b/src/assets/scss/bootstrap/_variables.scss
@@ -87,7 +87,7 @@ $info:          $indigo !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 // $light:         $gray-200 !default;
-$light:         #ececec !default;
+$light:         #FBFBFB !default;
 $dark:          #202a36 !default;
 $border:        #bdbdbd !default;
 
@@ -300,9 +300,9 @@ $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberati
 $font-family-base:            $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
 
-$font-size-base:              1rem !default; // Assumes the browser default, typically `16px`
-$font-size-lg:                $font-size-base * 1.25 !default;
-$font-size-sm:                $font-size-base * .875 !default;
+$font-size-base:              0.875rem !default; // Assumes the browser default, typically `16px`
+$font-size-lg:                1rem !default;
+$font-size-sm:                0.75rem !default;
 
 $font-weight-lighter:         200 !default;
 $font-weight-light:           300 !default;
@@ -342,7 +342,7 @@ $lead-font-weight:            300 !default;
 
 $small-font-size:             80% !default;
 
-$text-muted:                  #bdbdbd !default;
+$text-muted:                  #B5B8BC !default;
 
 $blockquote-small-color:      $gray-600 !default;
 $blockquote-small-font-size:  $small-font-size !default;
